@@ -288,15 +288,15 @@ Default value: \fBUnbound\fR
 .TP
 .B edit_window_title
 Edit the current active window's title
-Default value: \fB<Ctrl>W\fR
+Default value: \fB<Ctrl><Alt>W\fR
 .TP
 .B edit_tab_title
 Edit the currently active tab's title
-Default value: \fB<Ctrl>A\fR
+Default value: \fB<Ctrl><Alt>A\fR
 .TP
 .B edit_terminal_title
 Edit the currently active terminal's title
-Default value: \fB<Ctrl>X\fR
+Default value: \fB<Ctrl><Alt>X\fR
 .TP
 .B full_screen
 Toggle the window to a fullscreen window.
